--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
             android:theme="@style/AppTheme.YesActionBar">
         </activity>
         <activity
+            android:parentActivityName=".MainActivity"
+            android:name=".ui.info.InfoActivity"
+            android:label="InfoActivity"
+            android:theme="@style/AppTheme.YesActionBar">
+        </activity>
+        <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
