--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    packagingOptions {
+        exclude 'META-INF/atomicfu.kotlin_module'
+    }
 }
 
 repositories {
@@ -131,16 +134,8 @@ dependencies {
     implementation "androidx.camera:camera-camera2:1.0.0-SNAPSHOT"
     implementation "androidx.camera:camera-lifecycle:1.0.0-SNAPSHOT"
     implementation "androidx.camera:camera-view:1.0.0-SNAPSHOT"
-    //
-}
 
-configurations {
-    // Resolves dependency conflict caused by some dependencies use
-    // com.google.guava:guava and com.google.guava:listenablefuture together.
-    all*.exclude group: 'com.google.guava', module: 'listenablefuture'
-}
-
-dependencies {
+    //Room
     def room_version = "2.2.5"
 
     implementation "androidx.room:room-runtime:$room_version"
@@ -151,4 +146,24 @@ dependencies {
 
     // optional - Test helpers
     testImplementation "androidx.room:room-testing:$room_version"
+
+    // Room components
+    implementation "android.arch.persistence.room:runtime:1.1.1"
+    kapt "android.arch.persistence.room:compiler:1.1.1"
+    androidTestImplementation "android.arch.persistence.room:testing:1.1.1"
+
+    // Lifecycle components
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    kapt "android.arch.lifecycle:compiler:1.1.1"
+
+    // Coroutines
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.0"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.0"
+
+}
+
+configurations {
+    // Resolves dependency conflict caused by some dependencies use
+    // com.google.guava:guava and com.google.guava:listenablefuture together.
+    all*.exclude group: 'com.google.guava', module: 'listenablefuture'
 }
