--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.home.HomeActivity"></activity>
+        <activity
+            android:name=".ui.first.WelcomeActivity"
+            android:label="@string/title_activity_welcome"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".ui.home.HomeActivity" />
         <activity
             android:name=".ui.create.CreateActivity"
             android:label="CreateActivity"
-            android:theme="@style/AppTheme.YesActionBar"></activity>
+            android:theme="@style/AppTheme.YesActionBar" />
         <activity
             android:name=".ui.info.InfoActivity"
             android:label="InfoActivity"
             android:parentActivityName=".MainActivity"
-            android:theme="@style/AppTheme.YesActionBar"></activity>
+            android:theme="@style/AppTheme.YesActionBar" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
