--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,6 +108,8 @@ dependencies {
     // Pose detection with accurate models
     implementation 'com.google.mlkit:pose-detection-accurate:17.0.0'
 
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+
     // -------------------------------------------------------
 
     implementation 'com.google.code.gson:gson:2.8.5'
